--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>BROADCAST.EXE — Ночной эфир</title>
+  <title>MOTHDEMIENNE.EXE — Night Broadcast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Локальные мелочи под Win95 для ленты */
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
     .feed95{ height:60vh; min-height:360px; max-height:70vh; overflow:auto;
       background:#fff; color:#000;
@@ -23,50 +22,49 @@
   <div class="window95" style="max-width:980px; margin:24px auto 80px;">
     <div class="titlebar95">
       <div class="icon"></div>
-      <div class="title">BROADCAST.EXE — Ночной эфир</div>
+      <div class="title">MOTHDEMIENNE.EXE — Night Broadcast</div>
       <div class="controls95">
-        <!-- убрали ссылку на profile.html как legacy -->
         <button class="btn95 tb95" onclick="history.back()">×</button>
       </div>
     </div>
 
-    <!-- Меню под синей панелью -->
+    <!-- Menu bar -->
     <div class="menubar95">
-      <div class="menu95" id="menu-admin" title="Войти как админ / открыть панель">Admin ▾</div>
+      <div class="menu95" id="menu-admin" title="Login as admin / open panel">Admin ▾</div>
     </div>
 
     <div class="toolbar95" style="justify-content:space-between;">
-      <div>Ник:&nbsp;
-        <input id="nickname" class="input95" placeholder="Введите ник" maxlength="20" style="width:140px;" />
+      <div>Nick:&nbsp;
+        <input id="nickname" class="input95" placeholder="Enter nickname" maxlength="20" style="width:140px;" />
       </div>
       <div style="display:flex; gap:8px; align-items:center;">
-        <label for="ttl" style="color:#000;">Время жизни:</label>
+        <label for="ttl" style="color:#000;">Lifetime:</label>
         <select id="ttl" class="input95">
-          <option value="10">10 минут</option>
-          <option value="20">20 минут</option>
-          <option value="30" selected>30 минут</option>
+          <option value="10">10 minutes</option>
+          <option value="20">20 minutes</option>
+          <option value="30" selected>30 minutes</option>
         </select>
-        <span class="badge95">Сеанс: <span id="sessionLabel"></span></span>
-        <span class="badge95">До рассвета: <span id="left"></span></span>
+        <span class="badge95">Session: <span id="sessionLabel"></span></span>
+        <span class="badge95">Until dawn: <span id="left"></span></span>
       </div>
     </div>
 
     <div class="panel95">
       <div id="feed" class="feed95"></div>
       <div class="status95" style="gap:8px; align-items:center; flex-wrap:wrap;">
-        <input id="msg" class="input95" placeholder="Сказать в эфир…" maxlength="600" style="flex:1; min-width:240px;" />
-        <button class="btn95" id="send">Отправить</button>
+        <input id="msg" class="input95" placeholder="Say something…" maxlength="600" style="flex:1; min-width:240px;" />
+        <button class="btn95" id="send">Send</button>
       </div>
       <div class="status95" style="margin-top:6px; font-size:12px; color:#000;">
-        ⚠️ Ник не закрепляется и может быть занят кем угодно. Проверяйте, кому верить.
+        ⚠️ Nicknames are not reserved and can be taken by anyone. Be careful who you trust.
       </div>
       <div class="status95" style="margin-top:6px; font-size:12px;">
-        Сообщения старше 10 минут блекнут, старше 30 — исчезают. Лента обнуляется в 06:00 (Europe/Amsterdam).
+        Messages older than 10 minutes fade, older than 30 disappear. The feed resets at 06:00 (Europe/Amsterdam).
       </div>
     </div>
   </div>
 
-  <!-- Скрипты: firebase, меню, эфир -->
+  <!-- Scripts -->
   <script type="module" src="firebase.js"></script>
   <script type="module" src="admin-menu.js"></script>
   <script type="module" src="broadcast.firebase.js"></script>
