--- a/admin-login.html
+++ b/admin-login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>ADMIN-LOGIN.EXE</title>
@@ -24,22 +24,22 @@
     <div class="panel95">
       <div class="login-form95">
         <div class="row95">
-          <label>Статус:</label>
-          <span id="authStatus" style="color:#000;">Гость</span>
+          <label>Status:</label>
+          <span id="authStatus" style="color:#000;">Guest</span>
         </div>
         <label for="email" style="color:#000;">E-mail</label>
         <input id="email" class="input95" type="email" placeholder="you@example.com" />
 
-        <label for="password" style="color:#000;">Пароль</label>
+        <label for="password" style="color:#000;">Password</label>
         <input id="password" class="input95" type="password" placeholder="••••••••" />
 
         <div class="row95" style="justify-content:flex-end;">
-          <button class="btn95" id="doLogin">Войти</button>
+          <button class="btn95" id="doLogin">Log in</button>
         </div>
         <div id="loginError" style="color:#900; margin-top:6px;"></div>
       </div>
       <div class="status95">
-        <span>После входа вас перекинет в ADMIN.EXE</span>
+        <span>After login you will be redirected to ADMIN.EXE</span>
       </div>
     </div>
   </div>
