--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="data:,">
   <meta charset="UTF-8" />
   <title>MOTHDEMIENNE.EXE — Night Broadcast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -68,6 +69,7 @@
   <!-- Scripts -->
   <script type="module" src="firebase.js"></script>
   <script type="module" src="admin-menu.js"></script>
+  <script type="module" src="filters.js"></script>
   <script type="module" src="broadcast.firebase.js"></script>
 </body>
 </html>
