--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
-    .feed95{ height:60vh; min-height:360px; max-height:70vh; overflow:auto;
+    .feed95{ height:48vh; min-height:280px; max-height:56vh; overflow:auto;
       background:#fff; color:#000;
       border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
     .row95{ display:grid; grid-template-columns:160px 1fr auto; gap:8px; align-items:flex-start;
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body class="win95-bg">
-  <div class="window95" style="max-width:980px; margin:24px auto 80px;">
+  <div class="window95" style="max-width:1280px; margin:16px auto 40px;">
     <div class="titlebar95">
       <div class="icon"></div>
       <div class="title">MOTHDEMIENNE.EXE — Night Broadcast</div>
@@ -85,7 +85,7 @@
         ⚠️ Usernames aren’t reserved — anyone can type as you. Don’t trust strangers.
       </div>
       <div class="status95" style="margin-top:6px; font-size:12px;">
-        If you feel lonely or heavy-hearted — say it. Someone here is listening.
+        If you feel lonely or heavy‑hearted — say it. Someone here is listening.
       </div>
     </div>
   </div>
