--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
     /* shorter feed */
-    .feed95{ height:40vh; min-height:220px; max-height:48vh; overflow:auto;
+    .feed95{ height:36vh; min-height:200px; max-height:44vh; overflow:auto;
       background:#fff; color:#000;
       border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
     .row95{ display:grid; grid-template-columns:160px 1fr auto; gap:8px; align-items:flex-start;
@@ -27,8 +27,8 @@
   </style>
 </head>
 <body class="win95-bg">
-  <!-- wider window -->
-  <div class="window95" style="max-width:1440px; margin:12px auto 32px;">
+  <!-- slightly smaller window -->
+  <div class="window95" style="max-width:1200px; margin:10px auto 28px;">
     <div class="titlebar95">
       <div class="icon"></div>
       <div class="title">MOTHDEMIENNE.EXE — Night Broadcast</div>
