--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
-    /* shorter feed */
-    .feed95{ height:36vh; min-height:200px; max-height:44vh; overflow:auto;
+    /* BIGGER feed */
+    .feed95{ height:56vh; min-height:320px; max-height:72vh; overflow:auto;
       background:#fff; color:#000;
       border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
-    .row95{ display:grid; grid-template-columns:160px 1fr auto; gap:8px; align-items:flex-start;
+    .row95{ display:grid; grid-template-columns:180px 1fr auto; gap:8px; align-items:flex-start;
       border-bottom:1px solid #9e9e9e; padding:6px 8px; }
     .row95.dim { opacity:.55; }
     .post-text { white-space:pre-wrap; word-break:break-word; }
@@ -27,8 +27,8 @@
   </style>
 </head>
 <body class="win95-bg">
-  <!-- slightly smaller window -->
-  <div class="window95" style="max-width:1200px; margin:10px auto 28px;">
+  <!-- wider window -->
+  <div class="window95" style="max-width:1600px; margin:12px auto 32px;">
     <div class="titlebar95">
       <div class="icon"></div>
       <div class="title">MOTHDEMIENNE.EXE — Night Broadcast</div>
@@ -44,7 +44,7 @@
 
     <div class="toolbar95" style="justify-content:space-between;">
       <div>Nick:&nbsp;
-        <input id="nickname" class="input95" placeholder="Enter nickname" maxlength="20" style="width:160px;" />
+        <input id="nickname" class="input95" placeholder="Enter nickname" maxlength="20" style="width:180px;" />
       </div>
       <div style="display:flex; gap:8px; align-items:center;">
         <label for="ttl" style="color:#000;">Lifetime:</label>
