--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
   <style>
+    :root{
+      --outer-margin: 8px;
+      --window-max-width: 1440px;
+    }
+    html, body{ height:100%; }
+    body{ overflow:hidden; } /* no page scroll */
+    .window95{
+      display:flex; flex-direction:column;
+      max-width: var(--window-max-width);
+      height: calc(100vh - var(--outer-margin)*2);
+      margin: var(--outer-margin) auto;
+    }
+
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
-    /* BIGGER feed */
-    .feed95{ height:56vh; min-height:320px; max-height:72vh; overflow:auto;
-      background:#fff; color:#000;
-      border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
     .row95{ display:grid; grid-template-columns:180px 1fr auto; gap:8px; align-items:flex-start;
       border-bottom:1px solid #9e9e9e; padding:6px 8px; }
     .row95.dim { opacity:.55; }
@@ -24,11 +33,21 @@
     .rules95 li{ padding:4px 0; border-bottom:1px dashed #b7b7b7; }
     .rules95 li:last-child{ border-bottom:none; }
     .rules95 .tag{ display:inline-block; font-weight:bold; padding:0 6px; margin-right:6px; background:#000080; color:#fff; border:1px solid #ffffff; }
+
+    /* FEED PANEL grows to fill remaining space */
+    .panel95.feed-panel{
+      display:flex; flex-direction:column; min-height:0; /* allow child to shrink */
+    }
+    .feed95{
+      flex: 1 1 auto; min-height: 240px; max-height: 100%;
+      overflow:auto;
+      background:#fff; color:#000;
+      border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff;
+    }
   </style>
 </head>
 <body class="win95-bg">
-  <!-- wider window -->
-  <div class="window95" style="max-width:1600px; margin:12px auto 32px;">
+  <div class="window95">
     <div class="titlebar95">
       <div class="icon"></div>
       <div class="title">MOTHDEMIENNE.EXE — Night Broadcast</div>
@@ -67,7 +86,7 @@
       <div class="group95 group95--primary">Rules</div>
       <div class="rules95">
         <ul>
-          <li><span class="tag">Profanity</span> Not allowed. Caught even with spaces/symbols and in Latin look-alikes.</li>
+          <li><span class="tag">Profanity</span> Not allowed. Caught even with spaces/symbols and in Latin look‑alikes.</li>
           <li><span class="tag">Spam</span> Don’t flood. Sending is rate‑limited.</li>
           <li><span class="tag">Calls</span> No violence/terror/discrimination.</li>
           <li><span class="tag">Drugs</span> Mentions/propaganda — blocked.</li>
@@ -77,7 +96,8 @@
       </div>
     </div>
 
-    <div class="panel95">
+    <!-- FEED takes the rest -->
+    <div class="panel95 feed-panel">
       <div id="feed" class="feed95"></div>
       <div class="status95" style="gap:8px; align-items:center; flex-wrap:wrap;">
         <input id="msg" class="input95" placeholder="Say something…" maxlength="600" style="flex:1; min-width:240px;" />
