--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="data:,">
   <meta charset="UTF-8" />
   <title>MOTHDEMIENNE.EXE — Night Broadcast</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- === SEO START === -->
+  <link rel="canonical" href="https://demiennemoth.github.io/demienne.moth/"/>
+  <meta name="title" content="MOTHDEMIENNE.EXE — Night Broadcast">
+  <meta name="description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn. Drop a line if you’re awake.">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#000080">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://demiennemoth.github.io/demienne.moth/">
+  <meta property="og:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
+  <meta property="og:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
+  <meta property="og:image" content="https://demiennemoth.github.io/demienne.moth/favicon.svg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
+  <meta name="twitter:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
+  <meta name="twitter:image" content="https://demiennemoth.github.io/demienne.moth/favicon.svg">
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+
+  <!-- Structured data -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"MOTHDEMIENNE.EXE — Night Broadcast",
+    "url":"https://demiennemoth.github.io/demienne.moth/",
+    "inLanguage": "en",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Moth Demienne"
+    }
+  }
+  </script>
+  <!-- === SEO END === -->
+
   <link rel="stylesheet" href="style.css" />
   <style>
     :root{
