--- a/index.html
+++ b/index.html
@@ -10,25 +10,17 @@
   <meta name="description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn. Drop a line if you’re awake.">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#000080">
-
-  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://demiennemoth.github.io/demienne.moth/">
   <meta property="og:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
   <meta property="og:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
   <meta property="og:image" content="https://demiennemoth.github.io/demienne.moth/favicon.svg">
-
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
   <meta name="twitter:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
   <meta name="twitter:image" content="https://demiennemoth.github.io/demienne.moth/favicon.svg">
-
-  <!-- PWA -->
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
-
-  <!-- Structured data -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -36,36 +28,23 @@
     "name":"MOTHDEMIENNE.EXE — Night Broadcast",
     "url":"https://demiennemoth.github.io/demienne.moth/",
     "inLanguage": "en",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Moth Demienne"
-    }
+    "publisher": { "@type": "Organization", "name": "Moth Demienne" }
   }
   </script>
   <!-- === SEO END === -->
 
   <link rel="stylesheet" href="style.css" />
   <style>
-    :root{
-      --outer-margin: 0px;
-      --window-max-width: 1500px;
-    }
-    html, body{ height:100%; }
-    body{ overflow:hidden; } /* no page scroll */
-    .window95{
-      display:flex; flex-direction:column;
-      max-width: var(--window-max-width);
-      height: 100vh;
-      margin: var(--outer-margin) auto;
-    }
-
+    :root{ --outer-margin:0; --window-max-width:1500px; }
+    html,body{ height:100%; }
+    body{ overflow:hidden; }
+    .window95{ display:flex; flex-direction:column; max-width:var(--window-max-width); height:100vh; margin:var(--outer-margin) auto; }
     .badge95{ display:inline-block; padding:2px 6px; border:1px solid var(--95-dark,#808080); background:#efefef; color:#000; font-size:12px; }
-    .row95{ display:grid; grid-template-columns:180px 1fr auto; gap:8px; align-items:flex-start;
-      border-bottom:1px solid #9e9e9e; padding:6px 8px; }
-    .row95.dim { opacity:.55; }
-    .post-text { white-space:pre-wrap; word-break:break-word; }
-    .row95 .meta { font-size:12px; color:#333; }
-    .row95 .delbtn { margin-left:8px; }
+    .row95{ display:grid; grid-template-columns:180px 1fr auto; gap:8px; align-items:flex-start; border-bottom:1px solid #9e9e9e; padding:6px 8px; }
+    .row95.dim{ opacity:.55; }
+    .post-text{ white-space:pre-wrap; word-break:break-word; }
+    .row95 .meta{ font-size:12px; color:#333; }
+    .row95 .delbtn{ margin-left:8px; }
     .note95{ background:var(--95-light); border:1px solid var(--95-white); border-right-color:var(--95-dark); border-bottom-color:var(--95-dark); padding:6px; color:#000; }
     .rules95{ background:#fff; color:#000; padding:8px; border:2px solid var(--95-dark); border-right-color:var(--95-white); border-bottom-color:var(--95-white); }
     .rules95 ul{ list-style:none; padding:0; margin:0; }
@@ -73,23 +52,18 @@
     .rules95 li:last-child{ border-bottom:none; }
     .rules95 .tag{ display:inline-block; font-weight:bold; padding:0 6px; margin-right:6px; background:#000080; color:#fff; border:1px solid #ffffff; }
 
-    /* FEED PANEL grows to fill remaining space */
-    .panel95.feed-panel{
-      display:flex; flex-direction:column; min-height:0; flex: 1 1 auto;
-    }
-    .feed95{
-      flex: 1 1 auto; min-height: 0; max-height: 100%;
-      overflow:auto;
-      background:#fff; color:#000;
-      border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff;
-    }
+    .panel95.feed-panel{ display:flex; flex-direction:column; min-height:0; flex:1 1 auto; }
+    .feed95{ flex:1 1 auto; min-height:0; max-height:100%; overflow:auto; background:#fff; color:#000;
+      border:2px solid #000; border-right-color:#fff; border-bottom-color:#fff; }
 
-    /* Compact status bars to free space */
     .status95{ padding:3px 6px; line-height:1.2; }
     .status95 + .status95{ margin-top:2px; }
+
+    /* Honeypot — visible только ботам-формам */
+    .hp-field{ position:absolute !important; left:-10000px !important; top:auto !important; width:1px; height:1px; overflow:hidden; }
   </style>
 </head>
-<body class="win95-bg">
+<body class="win95-bg" data-page-born="1756121969388">
   <div class="window95">
     <div class="titlebar95">
       <div class="icon"></div>
@@ -139,12 +113,13 @@
       </div>
     </div>
 
-    <!-- FEED takes the rest -->
     <div class="panel95 feed-panel">
       <div id="feed" class="feed95"></div>
       <div class="status95" style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
         <input id="msg" class="input95" placeholder="Say something…" maxlength="600" style="flex:1; min-width:240px;" />
         <button class="btn95" id="send">Send</button>
+        <!-- Honeypot field for bots -->
+        <input id="website" name="website" class="hp-field" type="text" autocomplete="off" tabindex="-1" aria-hidden="true" />
       </div>
       <div class="status95" style="font-size:12px; color:#000;">
         ⚠️ Usernames aren’t reserved — anyone can type as you. Don’t trust strangers.
