--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>MOTHDEMIENNE.EXE — Night Broadcast</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- === SEO START === -->
+  \1<link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+<link rel="dns-prefetch" href="https://www.gstatic.com">
+<!-- === SEO START === -->
   <link rel="canonical" href="https://demiennemoth.github.io/demienne.moth/"/>
   <meta name="title" content="MOTHDEMIENNE.EXE — Night Broadcast">
   <meta name="description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn. Drop a line if you’re awake.">
@@ -138,7 +139,12 @@
     </div>
   </div>
 
-  <script type="module" src="firebase.js"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", ()=>{
+    document.body.setAttribute("data-page-born", String(Date.now()));
+  });
+</script>
+\1
   <script type="module" src="admin-menu.js"></script>
   <script type="module" src="filters.js"></script>
   <script type="module" src="broadcast.firebase.js"></script>
