--- a/admin.html
+++ b/admin.html
@@ -1,61 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <title>ADMIN.EXE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .grid95 { display:grid; grid-template-columns: 1fr auto; gap:8px; }
-    .card95 { background:#fff; color:#000; padding:8px; border:2px solid #000;
-      border-right-color:#fff; border-bottom-color:#fff; }
-    .muted { color:#333; font-size:12px; }
-    .table95 { width:100%; border-collapse:collapse; background:#fff; color:#000; }
-    .table95 th,.table95 td{ border:1px solid #808080; padding:6px 8px; text-align:left; }
-    .table95 th{ background:var(--95-light); }
-  </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://www.gstatic.com">
+  <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="style.css">
+  <title>Ночной эфир — Admin</title>
 </head>
-<body class="win95-bg">
-  <div class="window95" style="max-width:1080px; margin:24px auto 80px;">
+<body>
+  <div class="window95" style="max-width: 1100px; margin: 24px auto;">
     <div class="titlebar95">
-      <div class="icon"></div>
-      <div class="title">ADMIN.EXE — Panel</div>
-      <div class="controls95">
-        <button class="btn95 tb95" onclick="location.href='index.html'">⌂</button>
-        <button class="btn95 tb95" id="logoutBtn" title="Log out">⎋</button>
-      </div>
+      <div class="title95">Night Broadcast — Admin Panel</div>
     </div>
 
     <div class="panel95">
-      <div class="toolbar95" style="justify-content:space-between;">
-        <div>
-          <span class="group95">Status</span>
-          <span class="badge95">User: <span id="who"></span></span>
-        </div>
-        <div>
-          <button class="btn95" id="refreshBtn">Refresh</button>
-          <label style="color:#000; margin-left:8px;"><input type="checkbox" id="showExpired"/> Show expired</label>
-        </div>
+      <div class="row" style="display:flex; gap:12px; align-items:center; flex-wrap:wrap;">
+        <div>Signed in: <b id="adminUser">—</b></div>
+        <button id="reloadBtn" class="btn95">Reload</button>
+        <div style="margin-left:auto;">Rows: <b id="countLabel">0</b></div>
       </div>
+    </div>
 
-      <div class="panel95">
-        <table class="table95" id="table">
-          <thead>
-            <tr>
-              <th>Created</th>
-              <th>Expires</th>
-              <th>Nick</th>
-              <th>Text</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody id="tbody"></tbody>
-        </table>
-      </div>
+    <div class="panel95" style="overflow:auto;">
+      <table class="table95" style="min-width: 100%;">
+        <thead>
+          <tr>
+            <th>Created</th>
+            <th>Expires</th>
+            <th>Nick</th>
+            <th style="width:60%;">Text</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="recordsTbody"></tbody>
+      </table>
+    </div>
+
+    <div class="panel95">
+      <div class="status95 statusbar95">Ready.</div>
     </div>
   </div>
 
   <script type="module" src="firebase.js"></script>
+  <script type="module" src="admin-menu.js"></script>
   <script type="module" src="admin.js"></script>
 </body>
 </html>
