--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>MOTHDEMIENNE.EXE — Night Broadcast</title>
-  \1<link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
 <link rel="dns-prefetch" href="https://www.gstatic.com">
 <!-- === SEO START === -->
   <link rel="canonical" href="https://demiennemoth.github.io/demienne.moth/"/>
@@ -144,7 +145,6 @@
     document.body.setAttribute("data-page-born", String(Date.now()));
   });
 </script>
-\1
   <script type="module" src="admin-menu.js"></script>
   <script type="module" src="filters.js"></script>
   <script type="module" src="broadcast.firebase.js"></script>
