--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <meta property="og:url" content="https://demiennemoth.github.io/demienne.moth/">
   <meta property="og:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
   <meta property="og:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
-  <meta property="og:image" content="https://demiennemoth.github.io/demienne.moth/favicon.svg">
+  <meta property="og:image" content="https://demiennemoth.github.io/demienne.moth/favicon.ico">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
   <meta name="twitter:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
-  <meta name="twitter:image" content="https://demiennemoth.github.io/demienne.moth/favicon.svg">
+  <meta name="twitter:image" content="https://demiennemoth.github.io/demienne.moth/favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="favicon.ico">
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
