--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MOTHDEMIENNE.EXE — Night Broadcast</title>
   <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
-<link rel="dns-prefetch" href="https://www.gstatic.com">
-<!-- === SEO START === -->
+  <link rel="dns-prefetch" href="https://www.gstatic.com">
+  <!-- === SEO START === -->
   <link rel="canonical" href="https://demiennemoth.github.io/demienne.moth/"/>
   <meta name="title" content="MOTHDEMIENNE.EXE — Night Broadcast">
   <meta name="description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn. Drop a line if you’re awake.">
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://demiennemoth.github.io/demienne.moth/">
   <meta property="og:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
-  <meta property="og:description" content="A retro-styled night broadcast. Messages fade in minutes and reset at dawn.">
+  <meta property="og:description" content="A retro-styled night broadcast. Messages fade in minutes and disappear by ~30.">
   <meta property="og:image" content="https://demiennemoth.github.io/demienne.moth/favicon.ico">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="MOTHDEMIENNE.EXE — Night Broadcast">
@@ -67,18 +67,17 @@
     .status95 a{ color:#000; text-decoration: underline; }
     .status95 a:hover{ text-decoration: none; }
   
-#secret-admin {
-  position: fixed;
-  bottom: 2px;
-  right: 2px;
-  width: 2px;
-  height: 2px;
-  background: transparent;
-  z-index: 99999;
-  cursor: default;
-}
-
-</style>
+    #secret-admin {
+      position: fixed;
+      bottom: 2px;
+      right: 2px;
+      width: 2px;
+      height: 2px;
+      background: transparent;
+      z-index: 99999;
+      cursor: default;
+    }
+  </style>
 </head>
 <body class="win95-bg">
   <div class="window95">
@@ -92,8 +91,14 @@
     </div>
 
     <div class="menubar95" style="gap:6px; padding:3px 4px;">
-      <div id="secret-admin"></div>
+      <div id="secret-admin" aria-hidden="true"></div>
     </div>
+
+    <noscript>
+      <div class="status95" style="font-size:12px; color:#000; padding:8px;">
+        This site needs JavaScript to run. Please enable it to use the Night Broadcast.
+      </div>
+    </noscript>
 
     <div class="toolbar95" style="justify-content:space-between;">
       <div>Nick:&nbsp;
@@ -156,22 +161,21 @@
   document.addEventListener("DOMContentLoaded", ()=>{
     document.body.setAttribute("data-page-born", String(Date.now()));
   });
-</script>
+  </script>
   <script type="module" src="admin-menu.js"></script>
   <script type="module" src="filters.js"></script>
   <script type="module" src="broadcast.firebase.js"></script>
 
-<script>
-document.addEventListener("DOMContentLoaded", ()=>{
-  const secret = document.getElementById("secret-admin");
-  if(secret){
-    secret.addEventListener("click", ()=>{
-      window.location.href = "admin-login.html";
-    });
-  }
-});
-</script>
+  <script>
+  document.addEventListener("DOMContentLoaded", ()=>{
+    const secret = document.getElementById("secret-admin");
+    if(secret){
+      secret.addEventListener("click", ()=>{
+        window.location.href = "admin-login.html";
+      });
+    }
+  });
+  </script>
 
 </body>
 </html>
-
