--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   
     #secret-admin {
       position: fixed;
-      bottom: 2px;
-      right: 2px;
-      width: 2px;
-      height: 2px;
+      bottom: 4px;
+      right: 4px;
+      width: 14px;
+      height: 14px;
       background: transparent;
       z-index: 99999;
-      cursor: default;
+      cursor: pointer;
     }
   </style>
 </head>
