--- a/index.html
+++ b/index.html
@@ -72,35 +72,38 @@
 
     /* Responsive adjustments for small screens */
     @media (max-width: 600px) {
-      /* Expand the window to full width and remove margins */
+      /* On narrow viewports we keep the window centered with a small margin */
       :root {
-        --window-max-width: 100%;
-        --outer-margin: 0;
+        --window-max-width: calc(100% - 16px);
+        --outer-margin: 8px;
       }
       html, body {
         overflow-y: auto;
       }
       .window95 {
-        max-width: none;
-        margin: 0;
         height: auto;
         min-height: 100vh;
+        margin: var(--outer-margin) auto;
       }
-      /* Stack menu and toolbar vertically on small screens */
+      /* Allow toolbars and menus to wrap onto multiple lines instead of forcing a single column */
       .menubar95,
       .toolbar95 {
-        flex-direction: column;
-        align-items: stretch;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
         gap: 6px;
       }
-      .toolbar95 > div,
+      /* Flex children grow to fill available width but wrap as needed */
+      .toolbar95 > div {
+        flex: 1 0 180px;
+      }
       .toolbar95 select,
       .toolbar95 input {
-        width: 100% !important;
+        flex: 1 1 auto;
       }
-      /* Collapse table rows into single column */
+      /* Keep two columns for posts on mobile to avoid overly long lines */
       .row95 {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100px 1fr;
         gap: 6px;
       }
       .feed95 {
@@ -112,6 +115,12 @@
       }
       .badge95 {
         font-size: 10px;
+      }
+
+      /* Limit nickname input so it doesn't stretch across the screen */
+      #nickname {
+        max-width: 180px;
+        width: 100%;
       }
     }
   </style>
